--- a/js_assignment_Vicente_hernaiz/index.html
+++ b/js_assignment_Vicente_hernaiz/index.html
@@ -33,7 +33,7 @@
             <h3 class="carouseltitle">Get the highlights.</h3>
                     <div id="carouselcontainer">
                         <div class="caruselSlides" id="slide0">
-                            <img src="images/slide1.jpg" alt="AR glasses lateral view showing Ray-Ban design" class="carouselimg">
+                            <img src="images/slide1.jpg" alt="AR glasses lateral view showing design" class="carouselimg">
                             <p class="slidetext">Heat-forged carbon fiber unibody design for exceptional lightness and resistance.</p>
                             <button class="btnexpand"><img src="images/add_2.svg"></button>
                         </div>
